--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,8 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.getbase:floatingactionbutton:1.9.0'
-
+    implementation files('libs\\gson-2.8.2.jar')
 }
